Reimplement post-filter handling and refactor ES query handling in general